--- a/CE7System.dproj
+++ b/CE7System.dproj
@@ -100,6 +100,10 @@
             <Form>frm_login</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="U_Agendamento.pas">
+            <Form>frm_agendamento</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
