--- a/CE7System.dproj
+++ b/CE7System.dproj
@@ -104,6 +104,10 @@
             <Form>frm_agendamento</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="U_Funcionarios.pas">
+            <Form>frm_funcionarios</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
